Feeding pipe from a task

--- a/Pipemania.Test.Utils/Pipemania.Test.Utils.csproj
+++ b/Pipemania.Test.Utils/Pipemania.Test.Utils.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Pipemania.Core\Pipemania.Core.csproj" />
     <ProjectReference Include="..\Pipemania\Pipemania.csproj" />
   </ItemGroup>
 
