EndPoint to task and IAsyncEnumerator endpoint

--- a/Pipemania.Console/Pipemania.Console.csproj
+++ b/Pipemania.Console/Pipemania.Console.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Pipemania\Pipemania.csproj" />
+    <ProjectReference Include="..\Pipemania.Core.Interfaces\Pipemania.Core.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
