--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,4 +26,4 @@ jobs:
     - name: Pack
       run: dotnet pack --configuration Release
     - name: Push
-      run: dotnet nuget push "bin/Release/*.nupkg" --api-key ${{ secrets.TOKEN }} --source "github"
+      run: dotnet nuget push "bin/Release/*.nupkg" --api-key ${{ secrets.TOKEN }} --source "https://nuget.pkg.github.com/KalleKettunen/index.json"
