--- a/Pipemania.Core.Interfaces/Pipemania.Core.Interfaces.csproj
+++ b/Pipemania.Core.Interfaces/Pipemania.Core.Interfaces.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <RepositoryUrl>https://github.com/KalleKettunen/Pipemania</RepositoryUrl>
     </PropertyGroup>
 
 </Project>
