--- a/Pipemania.Core/Pipemania.Core.csproj
+++ b/Pipemania.Core/Pipemania.Core.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <LangVersion>9</LangVersion>
+    <RepositoryUrl>https://github.com/KalleKettunen/Pipemania</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
