--- a/Pipemania/Pipemania.csproj
+++ b/Pipemania/Pipemania.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <LangVersion>9</LangVersion>
     <TargetFramework>net5.0</TargetFramework>
+    <RepositoryUrl>https://github.com/KalleKettunen/Pipemania</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
